Updated rating instruction to fix repositioning issue
Updated rating instruction to fix repositioning issue

--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Rating_practice.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Rating_practice.html
@@ -29,13 +29,15 @@
         <!-- instruction element -->
         <div style="display: flex; justify-content: center; align-items: center;">
             <p style="text-align: center; 
-            font-size: 27.5px; 
-            text-align: center; 
-            margin-top: 50px; 
-            margin-bottom: 30px; 
-            background-color: lightgray; 
-            padding: 8px 10px;
-            border-radius: 5px;">
+                font-size: 27.5px; 
+                margin-top: 50px; 
+                margin-bottom: 30px; 
+                background-color: lightgray; 
+                padding: 8px 10px;
+                border-radius: 5px;
+                width: 600px;            
+                max-width: 90vw;          
+                word-wrap: break-word;">
                 {{ round_instruction }}
             </p>
         </div>
