--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
@@ -344,7 +344,7 @@ function updateInstruction() {
     } else if (result.attCheckTest && result.expectedRating == 'low') {
         paragraph.innerText = 'You must rate the similarity of these drawings as extremely low. This is an attention check.';
     } else {
-        paragraph.innerText = 'How do you rate the similarity of these drawings?';
+        paragraph.innerText = 'How do you rate the similarity of these drawings? Mark your response on the scale below.';
     }
 };
 
