--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
@@ -1,4 +1,4 @@
-{{ block title }}
+  {{ block title }}
 <span style="display: none;">Instruction_3</span>
 {{ endblock }}
 
@@ -13,11 +13,11 @@
 <div class="card instructions panel panel-default">
   <h4 class="card-header">Instructions</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
-
       <div class="card card-body">
         
         <p>
-          Here are further examples:
+          To help you use the full range of the scale (from LOW to HIGH), we will give you an idea of the range of variation you should expect. 
+          Consider the following illustrative examples.
         </p>
 
         <!--list formatting-->
@@ -27,23 +27,23 @@
 
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 40px;"> 
               <p>In this pair the similarity is relatively <strong>HIGH</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3a.png' }}" alt="" style="width: 70%; height: auto; border: 2px dotted">
+              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_2a.png' }}" alt="" style="width: 70%; height: auto; border: 2px dotted">
             </li>
 
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 40px;"> 
               <p>In this pair the similarity is <strong>INTERMEDIATE</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3b.png' }}" alt="" style="width: 70%; height: auto; border: 2px dotted">
+              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_2b.png' }}" alt="" style="width: 70%; height: auto; border: 2px dotted">
             </li>
 
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 10px;"> 
               <p>In this pair the similarity is relatively <strong>LOW</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3c.png' }}" alt="" style="width: 70%; height: auto; border: 2px dotted">
+              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_2c.png' }}" alt="" style="width: 70%; height: auto; border: 2px dotted">
             </li>
 
           </ul>
 
         </div> 
-       
+
       </div>
 
       <footer class="card-footer" style="display: flex; justify-content: flex-end; padding: 10px;">
