--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
@@ -1,16 +1,17 @@
 
 
 <div class="card instructions panel panel-default">
-  <h4 class="card-header">Good job!</h4>
+  <h4 class="card-header">End of practice round</h4>
   <!--<h4 class="card-header">Instructions<button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#instructionsbody" aria-expanded="false">Click for instructions </button></h4>-->
   <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
 	  <div class="card card-body">
       <p>
-        Now you are ready for the actual experiment.
+        Good job!
       </p>
       <p>
-        The experiment contains around 400 drawings to rate, divided into three blocks.<br>
-        Between the blocks, you will be invited to take breaks.
+        You will now begin the experiment. <br>
+        There are around 400 trials divided into 3 blocks. <br>
+        We will invite you to take a short break after each block. 
       </p>
       <p>
         Click <strong>Next</strong> to begin.
