--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
@@ -86,6 +86,14 @@
 
         </div>
         
+        <!-- progress text -->
+        <div id="progress-container">
+            <p id="progress-text" style="background-color: #eee; padding: 5px 10px; border-radius: 5px; width: fit-content;">
+                Block n of 3 <br>
+                Trial i of TOTAL
+            </p>
+        </div>
+
         <!-- hidden formfields for storing data -->
         <div id="formfield_errors">
 			{{ formfield_errors 'imageIndices' }}
@@ -103,14 +111,6 @@
         <button class="otree-btn-next btn btn-primary" id="button_next" type="button" onclick="loadNextImage();" style="float: right;">
             Next
         </button>
-
-        <!-- progress text -->
-        <div id="progress-container">
-            <p id="progress-text" style="background-color: #eee; padding: 5px 10px; border-radius: 5px; width: fit-content;">
-                Block n of 3 <br>
-                Trial i of TOTAL
-            </p>
-        </div>
 
 		<!-- initialising variables to store in Otree dataframe -->
 		<div>
@@ -399,7 +399,7 @@ function loadNextImage() {
 
     // make a time stamp for computing reaction times
     let t1 = performance.now();
-    let RT = t1 - t0;
+    let RT = Math.round(t1 - t0); // rounding this to the nearest integer (to reduce resolution to miliseconds)
     // console.log(`Rating took ${RT} milliseconds.`);
     t0 = performance.now(); // reset timer
 
@@ -471,9 +471,8 @@ function loadNextImage() {
     // Updating instruction text
     updateInstruction();
 
-    // updating progress bar
+    // updating progress display
     let progress = ((currentImageIndex) / totalPairs) * 100;
-        // document.getElementById('progress-bar').style.width = progress + '%';
         document.getElementById('progress-text').innerText = `Block ${(roundFactor)} of 3\nTrial ${(trialInBlock)} of ${roundSetSize}`;
 
 };
