Cosent form + instruction update
- Updated consent form pages (content and structure) to match the word doc.
- Updated text and example images across the instruction pages to match word doc and increase resolution.

--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_3.html
@@ -11,15 +11,21 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h4 class="card-header">Data controller, research group and principal investigator</h4>
+    <h4 class="card-header">Study procedure, risks, payment</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          Aarhus University is Data controller for the processing of your personal data. 
-          The study is carried out in the context of a larger research project, The Evolution of Early Symbolic Behavior (eSYMb), supported by an ERC grant awarded to Kristian Tylén. 
+          <strong>Study procedure:</strong> 
+          In this experiment, you will be asked to examine pairs of simple line drawings and rate how similar you find them. 
+          The experiment includes around 400 short trials divided into 3 blocks, and it should take about 30 min to complete. 
+          There will be breaks between the blocks. At the start of the experiment, you will receive further instructions and do a practice round to familiarise yourself with the task and the rating scale. 
         </p>
         <p>
-          The responsible investigators are Riccardo Fusaroli (Jens Chr. Skous Vej 2, building 1485, 640; email: fusaroli@cc.au.dk) and Murillo Pagnotta (murillo@cc.au.dk).  
+          <strong>Risks:</strong> 
+          There are no known disadvantages or risks involved in this study beyond those encountered in normal everyday life. 
+        <p>
+          <strong>Compensation:</strong> 
+          Your expected earnings for participating in the study are GBP 5.
         </p>
       </div>
       </div>
