--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_1.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_1.html
@@ -27,7 +27,7 @@
         </p>
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 20px;">
           <label>
-             <img id="imagePair" src="{{ static 'similarity/instruction_images/example_1a.png' }}" alt="">
+             <img id="imagePair" src="{{ static 'similarity/instruction_images/line.png' }}" alt="" style="width: 45%; height: auto; max-width: none; display: block; margin: 0 auto;">
           </label>
         </div> 
 
@@ -35,15 +35,11 @@
           Each drawing consists of 6 black lines arranged on a white background. 
           Here is one example:
         </p>
-
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 20px;">
           <label>
-             <img id="imagePair" src="{{ static 'similarity/instruction_images/example_1b.png' }}" alt="">
+             <img id="imagePair" src="{{ static 'similarity/instruction_images/single_drawing.png' }}" alt="" style="width: 50%; height: auto; max-width: none; display: block; margin: 0 auto;">
           </label>
         </div> 
-        <p>
-          Click <strong>Next</strong> to proceed.
-        </p>
       </div>
     </div>
   </div>
