--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_2.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_2.html
@@ -11,18 +11,20 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h4 class="card-header">Project description and aim of the study</h4>
+    <h4 class="card-header">Project description and research group</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-        The overall aim of this project is to advance our understanding of early human cognition and behaviour, between 100,000 – 50,000 years ago. 
-        </p>
-        <p>
+        The overall aim of this project is to advance our understanding of human cognition and behaviour between 100,000 – 50,000 years ago. 
         More specifically, in this study we are interested in examining the perceptual and cognitive properties of a set of drawings that were produced by participants in previous experiments. 
         This will eventually help us understand concrete collections of archaeological findings, and how they evolved in response to different social and cognitive factors.
         </p>
         <p>
-        Findings will be published in international scientific journals and presented at conferences, and we expect them to be of great interest to archaeologists and cognitive scientists interested in cultural evolution. 
+        The responsible investigators are Riccardo Fusaroli (Jens Chr. Skous Vej 2, building 1485, 640; email: fusaroli@cc.au.dk) and Murillo Pagnotta (murillo@cc.au.dk). 
+        </p>
+        <p>
+        The study is carried out in the context of a larger research project, The Evolution of Early Symbolic Behavior (eSYMb), which is financed by the European Commission through a European Research Council Consolidator Grant awarded to Kristian Tylén. 
+        Aarhus University is Data controller for the processing of your pseudonymised data (dpo@au.dk).
         </p>
       </div>
       </div>
