--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_4.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_4.html
@@ -11,17 +11,21 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h4 class="card-header">Study procedure</h4>
+    <h4 class="card-header">What data we collect</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          In this experiment, you will be asked to examine pairs of simple line drawings and rate how similar you find them.
+          The main data consist in your responses (similarity ratings), which will be included in subsequent statistical analyses. 
+          We also collect simple demographic information such as age, declared gender, native language(s), and nationality. 
+          Personal information used for payment is handled by Prolific and is not collected.  
         </p>
         <p>
-          The study consists of approximately 400 trials and is organized into 3 blocks with breaks between the blocks.
+          All the collected data are pseudonymised using your Prolific ID, and it will not be possible to directly identify participants based on the collected data.
         </p>
         <p>
-          At the start of the experiment, you will receive further instructions and do a practice round to familiarise yourself with the task and the rating scale.
+          <strong>Open science:</strong> 
+          In the interest of open science, the anonymized and preprocessed data will be made available to researchers from other institutions via public data repositories (usually OSF.org). 
+          It will not be possible to identify you from any published data. 
         </p>
       </div>
       </div>
