--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_5.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_5.html
@@ -11,14 +11,23 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h4 class="card-header">Risks</h4>
+    <h4 class="card-header">Withdrawal of consent</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
-        <p>
-          There are no known disadvantages or risks involved in this study beyond those encountered in normal everyday life. 
-          Your expected earnings for participating in the study are GBP 5. The study is expected to last around 30 min. 
-        </p>
-      </div>
+          <p>
+            Participation is voluntary and you may withdraw your consent at any time without stating a reason.    
+          </p>
+          <p>
+            If you wish to withdraw consent <strong><u>before</u></strong> finishing the experiment, simply leave the experiment without completing. 
+          </p>
+          <p>
+            If you wish to withdraw consent <strong><u>after</u></strong> finishing the experiment, you must contact the research group and provide your Prolific ID.
+          </p>
+          <p>
+            The responsible investigators are Riccardo Fusaroli (Jens Chr. Skous Vej 2, building 1485, 640; email: fusaroli@cc.au.dk) and Murillo Pagnotta (murillo@cc.au.dk). 
+            You may also write to the data protection officer at Aarhus University (dpo@au.dk).
+          </p>
+        </div>
       </div>
     </div>
   </div>
