--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_5.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_5.html
@@ -11,11 +11,8 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h4 class="card-header" style="padding: 10px;">
-      Practice round
-    </h4>
+    <h4 class="card-header" style="padding: 10px;">Practice round</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
-
       <div class="card card-body">
         <p>
           Before we begin with the experiment, you will go through a practice round. 
@@ -34,17 +31,10 @@
           <li>
             When you are ready to continue, click the ‘Next’ button or hit ‘Enter’ in your keyboard. 
           </li>
-        </ul>
-
-        <p>
-          Click <strong>Next</strong> to proceed to the practice round.
-        </p>
-        
+        </ul>        
       </div>
-
     </div>
   </div>
-  
 </div>
 
 <br />
