Fixed resize issue with instruction images
- Fixed resize issue with instruction images across the instruction example pages

--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_1.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_1.html
@@ -27,7 +27,7 @@
         </p>
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 20px;">
           <label>
-             <img id="imagePair" src="{{ static 'similarity/instruction_images/line.png' }}" alt="" style="width: 45%; height: auto; max-width: none; display: block; margin: 0 auto;">
+             <img id="imagePair" src="{{ static 'similarity/instruction_images/line.png' }}" alt="" style="width: 45%; min-width: 45%; height: auto; max-width: none; display: block; margin: 0 auto;">
           </label>
         </div> 
 
@@ -37,7 +37,7 @@
         </p>
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 20px;">
           <label>
-             <img id="imagePair" src="{{ static 'similarity/instruction_images/single_drawing.png' }}" alt="" style="width: 50%; height: auto; max-width: none; display: block; margin: 0 auto;">
+             <img id="imagePair" src="{{ static 'similarity/instruction_images/single_drawing.png' }}" alt="" style="width: 50%; min-width: 45%; height: auto; max-width: none; display: block; margin: 0 auto;">
           </label>
         </div> 
       </div>
