--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
@@ -19,7 +19,7 @@
         </p>
         <div id="draw" style="display: flex; justify-content: center; align-items: center; margin-bottom: 20px;">
           <label>
-             <img id="imagePair" src="{{ static 'similarity/instruction_images/two_drawings.png' }}" alt="" style="width: 50%; height: auto; max-width: none; display: block; margin: 0 auto;">
+             <img id="imagePair" src="{{ static 'similarity/instruction_images/two_drawings.png' }}" alt="" style="width: 250px; height: auto; display: block; margin: 0 auto;">
           </label>
         </div> 
         <p>
