--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
@@ -22,15 +22,15 @@
           <ul>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
               <p>In this pair the similarity is relatively <strong>HIGH</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_high.png' }}" alt="" style="width: 30%; height: auto; border: 0px dotted">
+              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_high.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 20px;"> 
               <p>In this pair the similarity is <strong>INTERMEDIATE</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_intermediate.png' }}" alt="" style="width: 30%; height: auto; border: 0px dotted">
+              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_intermediate.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
             <li style="display: flex; flex-direction: column; align-items: center; margin-bottom: 0px;"> 
               <p>In this pair the similarity is relatively <strong>LOW</strong>:</p>
-              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_low.png' }}" alt="" style="width: 30%; height: auto; border: 0px dotted">
+              <img id="imagePair" src="{{ static 'similarity/instruction_images/instruction_3_low.png' }}" alt="" style="width: 280px; height: auto; border: 0px dotted">
             </li>
           </ul>
         </div> 
