--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
@@ -10,7 +10,7 @@
   }
 </style>
 
-<div class="card instructions panel panel-default">
+<div class="card instructions panel panel-default" style="min-width: 400px;">
     <h4 class="card-header">What is your task?</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
       <div class="card card-body">
